# MDSystems

./: .coveragerc  LICENSE  README.md  pyproject.toml
mdsystems/: analysis.py  atoms.py  coordinates.py  distribution.py  helpers.py  iterators.py  pickles.py  spatial.py  temporal.py
sandbox/: coordinates.py  distribution.py  iterators.py
tests/: demo.ipynb  examples.ipynb  test.ipynb  test_stub.py
tests/data/: test.gro
